--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,7 +26,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="52dp"
         android:layout_marginLeft="52dp"
-        android:text="Café CON LECHE"
+        android:text="@string/cafe_conLeche"
         app:layout_constraintBaseline_toBaselineOf="@+id/btnMenosConLeche"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -56,7 +56,7 @@
         android:id="@+id/numCafeConLeche"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="0"
+        android:text="@string/initCount"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/btnMasConleche"
         app:layout_constraintStart_toEndOf="@+id/btnMenosConLeche"
@@ -70,7 +70,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="52dp"
         android:layout_marginLeft="52dp"
-        android:text="Café solo"
+        android:text="@string/cafe_solo"
         app:layout_constraintBaseline_toBaselineOf="@+id/btnMenosSolo3"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -78,12 +78,12 @@
         android:id="@+id/btnMenosSolo3"
         android:layout_width="@dimen/btnTamanio"
         android:layout_height="@dimen/btnTamanio"
-        android:layout_marginStart="112dp"
-        android:layout_marginLeft="112dp"
+        android:layout_marginStart="104dp"
+        android:layout_marginLeft="104dp"
+        android:onClick="countLessSolo"
         android:text="@string/lessBtn"
         app:layout_constraintBaseline_toBaselineOf="@+id/numCafeSolo"
-        app:layout_constraintStart_toEndOf="@+id/cafeSolo"
-        android:onClick="countLessSolo"/>
+        app:layout_constraintStart_toEndOf="@+id/cafeSolo" />
 
     <Button
         android:id="@+id/btnMasSolo"
@@ -91,10 +91,12 @@
         android:layout_height="@dimen/btnTamanio"
         android:layout_marginEnd="80dp"
         android:layout_marginRight="80dp"
+        android:layout_marginBottom="100dp"
+        android:onClick="countPlusSolo"
         android:text="@string/plusBtn"
         app:layout_constraintBaseline_toBaselineOf="@+id/numCafeSolo"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:onClick="countPlusSolo"/>
+        app:layout_constraintBottom_toTopOf="@+id/btnMasConleche"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <!-- end Cafe Solo controles y texto-->
 
@@ -104,7 +106,7 @@
         android:id="@+id/numCafeSolo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="0"
+        android:text="@string/initCount"
         app:layout_constraintBottom_toTopOf="@+id/numCafeConLeche"
         app:layout_constraintEnd_toStartOf="@+id/btnMasSolo"
         app:layout_constraintHorizontal_bias="0.526"
@@ -118,28 +120,29 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="52dp"
         android:layout_marginLeft="52dp"
-        android:text="Cafe Cortado"
+        android:text="@string/cafe_cortado"
         app:layout_constraintBaseline_toBaselineOf="@+id/btnMenosCortado"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <Button
-        android:id="@+id/btnMenosCortado"
-        android:layout_width="@dimen/btnTamanio"
-        android:layout_height="@dimen/btnTamanio"
-        android:layout_marginStart="88dp"
-        android:layout_marginLeft="88dp"
-        android:text="@string/lessBtn"
-        app:layout_constraintBaseline_toBaselineOf="@+id/numCafeCortado"
-        app:layout_constraintStart_toEndOf="@+id/cafeCortado"
-        android:onClick="cuntLessCortado"/>
+ <Button
+     android:id="@+id/btnMenosCortado"
+     android:layout_width="@dimen/btnTamanio"
+     android:layout_height="@dimen/btnTamanio"
+     android:layout_marginStart="76dp"
+     android:layout_marginLeft="76dp"
+     android:layout_marginTop="100dp"
+     android:onClick="cuntLessCortado"
+     android:text="@string/lessBtn"
+     app:layout_constraintStart_toEndOf="@+id/cafeCortado"
+     app:layout_constraintTop_toBottomOf="@+id/btnMenosConLeche" />
 
-    <TextView
+ <TextView
         android:id="@+id/numCafeCortado"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="120dp"
 
-        android:text="0"
+        android:text="@string/initCount"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/btnMasCortado"
         app:layout_constraintHorizontal_bias="0.526"
@@ -147,16 +150,17 @@
         app:layout_constraintTop_toBottomOf="@+id/numCafeConLeche"
         app:layout_constraintVertical_bias="0.0" />
 
-    <Button
-        android:id="@+id/btnMasCortado"
-        android:layout_width="@dimen/btnTamanio"
-        android:layout_height="@dimen/btnTamanio"
-        android:layout_marginEnd="80dp"
-        android:layout_marginRight="80dp"
-        android:text="@string/plusBtn"
-        app:layout_constraintBaseline_toBaselineOf="@+id/numCafeCortado"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:onClick="countPlusCortado"/>
+ <Button
+     android:id="@+id/btnMasCortado"
+     android:layout_width="@dimen/btnTamanio"
+     android:layout_height="@dimen/btnTamanio"
+     android:layout_marginTop="100dp"
+     android:layout_marginEnd="80dp"
+     android:layout_marginRight="80dp"
+     android:onClick="countPlusCortado"
+     android:text="@string/plusBtn"
+     app:layout_constraintEnd_toEndOf="parent"
+     app:layout_constraintTop_toBottomOf="@+id/btnMasConleche" />
     <!-- end of Cafe cortado-->
 
 
