--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -29,7 +29,8 @@
             android:id="@+id/home_delivery"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Reparto a domicilio" />
+            android:text="Reparto a domicilio"
+            android:checked="true"/>
 
         <RadioButton
             android:id="@+id/local_delivery"
